# dusk-studio

./: .clang-format  .gitignore  .gitmodules  BUILDING-LINUX.md  BUILDING-WINDOWS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DuskStudio.md  Focal.md  LICENSES.txt  MANUAL.md  README.md  SECURITY.md  TODO.md
.claude/: settings.json
.claude/hooks/: ai-slop-check.sh  commit-hygiene-check.sh  manual-sync-check.sh
.githooks/: pre-push
.github/workflows/: linux-build-arm64.yml  linux-build.yml  linux-release.yml  linux-sanitizer.yml  macos-build.yml  macos-release.yml  manual-pdf.yml  raspberry-pi-build.yml  windows-build.yml  windows-tests.yml
.github/workflows.disabled/: linux-build-arm64.yml  linux-sanitizer.yml  release-tag.yml
docs/: KEYBINDINGS.md  MAINTAINER-GUIDE.md  SPLIT-PLAN.md  USER_GUIDE.md  build-pdf.sh  capture-screenshots.sh  dejuce-audiofile-plan.md  dejuce-campaign.md  dejuce-device-phase3-audio-plan.md  dejuce-native-midi-plan.md  dp24-import-build-prompt.md  lv2-dsp-integration-handoff.md  native-clap-host-plan.md  native-plugin-hosting-spike.md  native-vst3-lv2-host-plan.md  screenshot-list.md
packaging/: DuskStudio.appdata.xml  DuskStudio.mime.xml  Focal.appdata.xml  Focal.mime.xml  README-linux.txt  README.md  audio.dusk.Focal.desktop  audio.dusk.studio.desktop
packaging/macos/: entitlements.plist
scripts/: bump-version.sh  dev.sh  install-linux.sh  package-appimage.sh  package-linux.sh  package-macos.sh  package-tarball.sh  package-windows.ps1  update-patrons.py
src/: DuskStudioApp.cpp  DuskStudioApp.h  FocalApp.cpp  Main.cpp
src/dsp/: AuxLaneStrip.cpp  AuxLaneStrip.h  BrickwallLimiter.cpp  BrickwallLimiter.h  BusStrip.cpp  BusStrip.h  ChannelStrip.cpp  ChannelStrip.h  ChordAnalyzer.cpp  ChordAnalyzer.h  HardwareInsertSlot.cpp  HardwareInsertSlot.h  LoudnessMeter.cpp  LoudnessMeter.h  MasterBus.cpp  MasterBus.h  MasteringChain.cpp  MasteringChain.h  MasteringDigitalEq.cpp  MasteringDigitalEq.h  Metronome.cpp  Metronome.h  MultibandCompPresets.h  OutputPairRouting.h  PitchDetector.h
src/engine/: AtomicPark.h  AudioEngine.cpp  AudioEngine.h  AudioPipelineSelfTest.cpp  AudioPipelineSelfTest.h  AudioWorkerPool.cpp  AudioWorkerPool.h  BounceEngine.cpp  BounceEngine.h  DeviceFallbackMessage.h  DpAligner.cpp  DpAligner.h  DpImporter.cpp  DpImporter.h  DuskStudioPlayHead.h  FaderBindingMap.h  FileImporter.cpp  FileImporter.h  JuceCompat.h  LameMp3Writer.cpp  LameMp3Writer.h  LatencyCompensator.cpp  LatencyCompensator.h  MasteringPlayer.cpp  MasteringPlayer.h  McuController.cpp  McuController.h  McuFaderTaper.h  McuProtocol.h  McuReceiver.cpp  McuReceiver.h  MidiClockEmitter.cpp  MidiClockEmitter.h  MidiSyncReceiver.cpp  MidiSyncReceiver.h  MidiTimeCodeEmitter.cpp  MidiTimeCodeEmitter.h  MidiTimeCodeReceiver.cpp  MidiTimeCodeReceiver.h  NativeScanRows.h  (+12 more)
src/engine/alsa/: AlsaAudioIODevice.cpp  AlsaAudioIODevice.h  AlsaAudioIODeviceType.cpp  AlsaAudioIODeviceType.h  AlsaPerformanceTest.cpp  AlsaPerformanceTest.h
src/engine/audiofile/: BufferedFileReader.cpp  BufferedFileReader.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  IFileWriteSink.h  ThreadedFileWriter.cpp  ThreadedFileWriter.h  WriterDrainPool.cpp  WriterDrainPool.h
src/engine/clap/: ClapBundle.cpp  ClapBundle.h  ClapEditor.cpp  ClapEditor.h  ClapHost.cpp  ClapHost.h  ClapInstance.cpp  ClapInstance.h  ClapScanner.cpp  ClapScanner.h  NativeClapSlot.cpp  NativeClapSlot.h
src/engine/device/: ChannelSet.h  DeviceManager.cpp  DeviceManager.h  DeviceManagerJuce.cpp  DeviceSetup.h  DeviceStateBlob.cpp  DeviceStateBlob.h  IODevice.h  IODeviceCallback.h  IODeviceType.h
src/foundation/: AutoResetEvent.h  Decibels.h  Fs.h  IntDelayLine.h  Json.h  MessageThread.cpp  MessageThread.h  MidiBuffer.h  MidiCollector.h  MidiRing.h  ScopedNoDenormals.h  SmoothedValue.h  StereoOversampler.h  Text.h  TransportPosition.h
src/session/: AtomicSnapshot.h  MarkerEditActions.cpp  MarkerEditActions.h  MidiBindings.cpp  MidiBindings.h  ParamEditAction.h  RecentSessions.cpp  RecentSessions.h  RegionEditActions.cpp  RegionEditActions.h  Session.cpp  Session.h  SessionSerializer.cpp  SessionSerializer.h  SessionTemplates.cpp  SessionTemplates.h  SnapHelpers.h
src/ui/: AnalogVuMeter.cpp  AnalogVuMeter.h  AppConfig.cpp  AppConfig.h  AudioRegionEditor.cpp  AudioRegionEditor.h  AudioSettingsPanel.cpp  AudioSettingsPanel.h  AuxEditorHost.cpp  AuxEditorHost.h  AuxLaneComponent.cpp  AuxLaneComponent.h  AuxView.cpp  AuxView.h  BounceDialog.cpp  BounceDialog.h  BusComponent.cpp  BusComponent.h  ChannelCompEditor.cpp  ChannelCompEditor.h  ChannelEqEditor.cpp  ChannelEqEditor.h  ChannelStripComponent.cpp  ChannelStripComponent.h  ClapPluginEditorComponent.cpp  ClapPluginEditorComponent.h  CompBypassLed.h  CompHeaderButton.h  CompMeterStrip.cpp  CompMeterStrip.h  ConsoleView.cpp  ConsoleView.h  CursorOverlay.cpp  CursorOverlay.h  DimOverlay.cpp  DimOverlay.h  DpImportDialog.h  DuskAlerts.cpp  DuskAlerts.h  DuskAudioDeviceSelector.cpp  (+79 more)
src/util/: CrashHandler.cpp  CrashHandler.h  StringParsing.h
tests/: CMakeLists.txt  alsa_seq_midi.cpp  alsa_thread_teardown.cpp  aria_gui_parse.cpp  atomic_park.cpp  audio_worker_pool.cpp  audiofile_ab_null.cpp  audiofile_buffered_reader.cpp  audiofile_drain_pool.cpp  audiofile_roundtrip.cpp  automation_lane_snapshot.cpp  automation_thinning.cpp  bounce_stem_filename.cpp  bounce_stem_targets.cpp  bus_stereo_link.cpp  bus_strip.cpp  chord_analyzer.cpp  clap_ab_nulltest.cpp  clap_bundle_load.cpp  clap_instance_process.cpp  clap_native_slot.cpp  clap_params.cpp  clap_scanner.cpp  comp_core_ab.cpp  comp_helpers.h  comp_static_curve.cpp  comp_timing.cpp  console_saturation.cpp  crossfade.cpp  device_fallback_message.cpp  device_interfaces.cpp  device_manager_native.cpp  device_state_blob.cpp  dp_aligner_align.cpp  dp_importer_parse.cpp  dsp_components_test.cpp  dsp_loudness_meter.cpp  dsp_stereo_oversampler.cpp  embedded_modal_close_safety.cpp  eq_british_ab.cpp  (+84 more)
tests/support/: DuskMidiTestBridge.h
tools/: juce-allowlist.txt  juce-gate.sh  tsan_suppressions.txt
(+82 files in other folders)
